// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MeetingDetailView — snapshots > matches snapshot with all fields set 1`] = `
<DocumentFragment>
  <div
    class="p-4"
  >
    <div
      class="grid gap-6 @[600px]:grid-cols-2"
    >
      <div
        class="flex flex-col gap-4"
      >
        <div
          class="flex gap-6"
        >
          <div>
            <p
              class="font-semibold uppercase tracking-wide text-muted-foreground"
            >
              Champion Level
            </p>
            <p
              class="mt-1 text-sm"
            >
              4 – Advocate
            </p>
          </div>
        </div>
        <div>
          <p
            class="font-semibold uppercase tracking-wide text-muted-foreground"
          >
            Notes
          </p>
          <div
            class="mt-1 border-l-4 border-muted pl-3"
          >
            <p
              class="text-sm"
            >
              Brief discussion on policy.
            </p>
          </div>
        </div>
        <div>
          <p
            class="font-semibold uppercase tracking-wide text-muted-foreground"
          >
            Links
          </p>
          <ul
            class="mt-1 flex flex-col gap-1"
          >
            <li>
              <a
                class="inline-flex items-center gap-1 text-sm text-primary-dark underline-offset-4 hover:underline"
                href="https://example.com/deck"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-external-link h-3 w-3 shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 3h6v6"
                  />
                  <path
                    d="M10 14 21 3"
                  />
                  <path
                    d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
                  />
                </svg>
                Deck
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <div>
          <p
            class="font-semibold uppercase tracking-wide text-muted-foreground"
          >
            Time
          </p>
          <p
            class="mt-1 text-sm"
          >
            9:00 AM EDT
          </p>
        </div>
        <div>
          <p
            class="font-semibold uppercase tracking-wide text-muted-foreground"
          >
            Location
          </p>
          <p
            class="mt-1 text-sm"
          >
            Virtual
          </p>
        </div>
        <div>
          <p
            class="font-semibold uppercase tracking-wide text-muted-foreground"
          >
            Delegation
          </p>
          <div
            class="mt-2 flex flex-col gap-3"
          >
            <div
              class="flex flex-col gap-0.5"
            >
              <span
                class="text-sm text-muted-foreground"
              >
                Scheduling Lead
              </span>
              <span
                class="flex items-center gap-2"
              >
                <span
                  aria-hidden="true"
                  class="flex h-7 w-7 shrink-0 items-center justify-center rounded-full bg-muted text-xs font-semibold"
                >
                  AS
                </span>
                <span
                  class="min-w-0 flex-1"
                >
                  <span
                    class="text-sm font-medium"
                  >
                    Alice Smith
                  </span>
                  <a
                    class="ml-1.5 text-xs text-muted-foreground underline-offset-4 hover:underline"
                    href="mailto:alice@example.com"
                  >
                    alice@example.com
                  </a>
                </span>
              </span>
            </div>
            <div
              class="flex flex-col gap-0.5"
            >
              <span
                class="text-sm text-muted-foreground"
              >
                PIH Team Member
              </span>
              <span
                class="flex items-center gap-2"
              >
                <span
                  aria-hidden="true"
                  class="flex h-7 w-7 shrink-0 items-center justify-center rounded-full bg-muted text-xs font-semibold"
                >
                  BJ
                </span>
                <span
                  class="min-w-0 flex-1"
                >
                  <span
                    class="text-sm font-medium"
                  >
                    Bob Jones
                  </span>
                  <a
                    class="ml-1.5 text-xs text-muted-foreground underline-offset-4 hover:underline"
                    href="mailto:bob@example.com"
                  >
                    bob@example.com
                  </a>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="mt-auto pt-2"
        >
          <button
            class="inline-flex shrink-0 items-center justify-center gap-2 rounded-md text-sm font-medium whitespace-nowrap transition-all outline-none focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3"
            data-size="default"
            data-slot="button"
            data-variant="outline"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-pencil h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
              />
              <path
                d="m15 5 4 4"
              />
            </svg>
            Edit Meeting
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MeetingDetailView — snapshots > matches snapshot with minimal fields (no optional data) 1`] = `
<DocumentFragment>
  <div
    class="p-4"
  >
    <div
      class="grid gap-6 @[600px]:grid-cols-2"
    >
      <div
        class="flex flex-col gap-4"
      />
      <div
        class="flex flex-col gap-4"
      >
        <div>
          <p
            class="font-semibold uppercase tracking-wide text-muted-foreground"
          >
            Delegation
          </p>
          <p
            class="mt-1 text-sm text-muted-foreground"
          >
            None
          </p>
        </div>
        <div
          class="mt-auto pt-2"
        >
          <button
            class="inline-flex shrink-0 items-center justify-center gap-2 rounded-md text-sm font-medium whitespace-nowrap transition-all outline-none focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3"
            data-size="default"
            data-slot="button"
            data-variant="outline"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-pencil h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
              />
              <path
                d="m15 5 4 4"
              />
            </svg>
            Edit Meeting
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
